cleaned up code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,15 @@ body{
     -webkit-filter: saturate(10); 
     filter: saturate(10);
 }
+
+#goal, #score, #wins, #losses{
+    font-family: 'Roboto Mono', monospace;
+}
+
+#goal, #score{
+    text-align: center;
+}
+
+h1, h2, h3, h4, p{
+    font-family: 'Merriweather Sans', sans-serif;
+}
